--- a/style1.css
+++ b/style1.css
@@ -1,463 +1,335 @@
-<style>
-  /* Code By Webdevtrick ( https://webdevtrick.com ) */
-@import url(https://fonts.googleapis.com/css?family=Varela+Round);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
-*, *::after, *::before {
+@import url("https://fonts.googleapis.com/css?family=poppins:200,300,400,500,600,700,800,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  font-family: "poppins", sans-serif;
 }
- 
-html, body {
-  height: 100%;
-}
- 
+
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  line-height: 1.5em;
-}
- 
-a {
-  color: #66cc99;
-  text-decoration: none;
-}
- 
-.clearfix::after, .clearfix::before {
-  content: " ";
-  display: table;
-}
- 
-.clearfix::after {
-  clear: both;
-}
- 
-.bold {
-  color: #4a4e51;
-  font-weight: 400;
-}
- 
-.resume-wrapper {
-  position: relative;
-  text-align: center;
-  height: 100%;
-}
- 
-.container {
-  min-height: 600px;
-}
- 
-.profile {
-  background: #fff;
-  width: 40%;
-  float: left;
-  color: #9099a0;
-}
-@media (max-width: 850px) {
-  .profile {
-    width: 100%;
-  }
-}
-.profile .name-wrapper {
-  float: left;
-  width: 60%;
-}
-.profile h1 {
-  font-size: 2.5em;
-  text-align: left;
-  font-family: 'Varela Round', sans-serif;
-  color: #4a4e51;
-  text-transform: uppercase;
-  line-height: 1em;
-  padding-top: 40px;
-}
-@media (max-width: 1200px) {
-  .profile h1 {
-    padding-top: 20px;
-  }
-}
-@media (max-width: 450px) {
-  .profile h1 {
-    font-size: 1.8em;
-    padding-top: 20px;
-  }
-}
-.profile li {
-  margin-bottom: 10px;
-}
-.profile .picture-resume-wrapper {
-  width: 40%;
-  display: block;
-  float: left;
-}
-@media (max-width: 1200px) {
-  .profile .picture-resume-wrapper {
-    width: 100%;
-  }
-}
-.profile .picture-resume {
-  width: 220px;
-  height: 220px;
-  background-size: cover;
-  border-radius: 50%;
-  margin-right: 0px;
-  display: table;
-  position: relative;
-  vertical-align: middle;
-}
-.profile .picture-resume span {
-  display: table-cell;
-  vertical-align: middle;
-  position: relative;
-  margin: 0 auto;
-  z-index: 10;
-  text-align: center;
-}
-.profile .picture-resume img {
-  border-radius: 50%;
-  width: 130px;
-}
-@media (max-width: 1500px) {
-  .profile .picture-resume img {
-    width: 80px;
-  }
-}
-@media (max-width: 1200px) {
-  .profile .picture-resume img {
-    width: 120px;
-    height: 120px;
-  }
-}
-@media (max-width: 1500px) {
-  .profile .picture-resume {
-    width: 150px;
-    height: 150px;
-  }
-}
-@media (max-width: 1200px) {
-  .profile .picture-resume {
-    width: 200px;
-    height: 200px;
-  }
-}
-@media (max-width: 450px) {
-  .profile .picture-resume {
-    width: 180px;
-    height: 180px;
-  }
-}
-.profile .contact-info {
-  margin-top: 100px;
-  font-weight: 300;
-}
-@media (max-width: 1200px) {
-  .profile .contact-info {
-    margin-top: 70px;
-  }
-}
-@media (max-width: 450px) {
-  .profile .contact-info {
-    margin-top: 50px;
-  }
-}
-.profile .list-titles {
-  float: left;
-  text-align: left;
-  font-weight: 600;
-  width: 40%;
-  color: #4a4e51;
-}
-.profile .list-content {
-  float: left;
-  width: 60%;
-  text-align: left;
-  font-weight: 300;
-}
-.profile .contact-presentation {
-  text-align: left;
-  font-weight: 300;
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-@media (max-width: 1200px) {
-  .profile .contact-presentation {
-    margin-top: 70px;
-    margin-bottom: 70px;
-  }
-}
-@media (max-width: 850px) {
-  .profile .contact-presentation {
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
-}
-.profile svg {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.profile .st0, .profile .st1 {
-  fill: #66cc99;
-}
- 
-.experience {
-  background: #3d3e42;
-  width: 60%;
-  float: left;
-  position: relative;
-  color: #9099a0;
-  font-weight: 300;
-  min-height: 100%;
+  background: rgb(130, 209, 235);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
 }
-@media (max-width: 850px) {
-  .experience {
-    width: 100%;
-  }
+
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 1000px;
+  min-height: 1190px;
+  margin: 50px;
+  background: #fff;
+  display: grid;
+  grid-template-columns: 1fr 2fr ;
+  box-shadow: 0 35px 55px rgba(0,0,0,0.1);
 }
-.experience h3.experience-title {
-  color: #66cc99;
-  text-align: left;
+
+.container .left_side {
+  position: relative;
+  background: #003147;
+  padding: 40;
+}
+.profileText{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(255,255,255,0.2);
+    margin: 20px;
+}
+
+.profileText .image {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    border-radius: 50% ;
+    overflow: hidden;
+
+}
+
+.profileText .image img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.profileText h2{
+    color: #fff;
+    font-size: 1.5em;
+    margin-top: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 600;
+    line-height: 1.4em;
+}
+.profileText h2 span{
+    font-size: 0.8em;
+    font-weight: 300;
+}
+.contactInfo{
+  padding-top: 40px;
+  
+}
+.title {
+  color: #fff;
   text-transform: uppercase;
-  font-size: 1.2em;
+  font-weight: 600;
+  letter-spacing: 1px;
   margin-bottom: 20px;
-  font-weight: 400;
+  margin-left: 35px;
+
 }
-.experience .company-wrapper {
-  width: 30%;
-  float: left;
-  text-align: left;
-  padding-right: 5%;
-  margin-bottom: 60px;
-}
-@media (max-width: 450px) {
-  .experience .company-wrapper {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-}
-.experience .job-wrapper {
-  width: 70%;
-  float: left;
-  text-align: left;
-  padding-right: 5%;
-  margin-bottom: 60px;
-}
-@media (max-width: 450px) {
-  .experience .job-wrapper {
-    width: 100%;
-    margin-bottom: 40px;
-  }
-}
-.experience .experience-title {
-  color: white;
-  margin-bottom: 15px;
-}
- 
-.section-padding {
-  padding: 60px 60px 40px 40px;
-}
-@media (max-width: 850px) {
-  .section-padding {
-    padding: 80px 15% 40px 10%;
-  }
-}
-@media (max-width: 450px) {
-  .section-padding {
-    padding: 40px 10% 20px 5%;
-  }
-}
- 
-.section-wrapper {
-  width: 50%;
-  float: left;
-  text-align: left;
-  color: #9099a0;
-  font-weight: 300;
-  margin-bottom: 20px;
-}
-@media (max-width: 450px) {
-  .section-wrapper {
-    width: 100%;
-  }
-}
-.section-wrapper:nth-child(3) {
-  padding-right: 8%;
-}
-.section-wrapper h3.section-title {
-  color: #66cc99;
-  text-align: left;
-  text-transform: uppercase;
-  font-size: 1.2em;
-  margin-bottom: 20px;
-  font-weight: 400;
-}
-.section-wrapper .skill-percentage {
-  margin-bottom: 10px;
+
+.contactInfo ul{
   position: relative;
 }
-.section-wrapper .skill-percentage::after {
-  content: "";
+.contactInfo ul li{
+  position: relative;
+  list-style: none;
+  margin: 10px 0;
+  cursor: pointer;
+  margin-left: 35px;
+  line-height: 1.4;
+}
+
+.contactInfo ul li .icon{
+  display: inline-block;
+  width: 30px;
+  font-size: 18px;
+  color: #03a9f4;
+}
+
+.contactInfo ul li span{
+  color: #fff;
+  font-weight: 300;
+}
+
+.contactInfo ul li span a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 300;
+}
+
+.contactInfo.education li{
+  margin-bottom: 10px ;
+}
+.contactInfo.education h5{
+  color:  #03a9f4;
+  font-weight: 500;
+}
+
+.contactInfo.education h4:nth-child(2){
+  color: #fff;
+  font-weight: 500;
+  
+}
+
+.contactInfo.education h4{
+  color: #fff;
+  font-weight: 300;
+  
+}
+.contactInfo.language{
+  margin-top: 5px;
+}
+
+.contactInfo.language .percent {
+  position: relative;
   width: 100%;
   height: 6px;
-  background: #4a4e51;
+  display: #081921;
   display: block;
-  margin-top: 3px;
+  margin-top: 5px;
+  
+
 }
-.section-wrapper .skill-percentage::before {
-  content: "";
-  height: 6px;
-  background: #66cc99;
-  position: absolute;
-  margin-top: 3px;
-  bottom: 0;
+
+.contactInfo.language .percent div {
+  position:absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #03a9f4;
 }
-.section-wrapper .skill-percentage:nth-child(1)::before {
-  width: 80%;
-  -webkit-animation: skill_1 0.6s ease;
-          animation: skill_1 0.6s ease;
+
+
+
+
+
+.container .right_side {
+  position: relative;
+  background-color: #fff;
+  padding: 40;
 }
-.section-wrapper .skill-percentage:nth-child(2)::before {
+
+
+.about{
+  margin-bottom: 50px;
+}
+
+.about:last-child
+{
+  margin-bottom: 0;
+}
+.title2{
+  color: #003147;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+p{
+  color: #333;
+  margin-left: 20px;
+}
+
+.about .box {
+  display: flex;
+  flex-direction:column;
+  margin: 20px;
+
+
+}
+
+.about .box .year_company {
+  min-width: 150px;
+}
+.about .box .year_company h5 {
+  text-transform: uppercase ;
+  color: #848c90;
+  font-weight: 600;
+  line-height: 1.4;
+
+}
+
+.about .box .text h5 {
+  text-transform: uppercase;
+  color: #2a7da2;
+  font-size: 16px;
+
+}
+
+.about .box ul {
+  margin-left: 20px;
+}
+
+.about.about.skills .box .year_company h5 {
+  text-transform: uppercase ;
+  color: #848c90;
+  font-weight: 600;
+  line-height: 1.4;
+
+}
+
+.about.skills .box .text h5 {
+  text-transform: uppercase;
+  color: #2a7da2;
+  font-size: 16px;
+
+}
+
+.about.skills .box ul {
+  margin-left: 20px;
+}
+
+.skills .box{
+  position: relative;
+  width: 100%;
+  
+  
+}
+
+.skills .box h4 {
+  text-transform: uppercase ;
+  color: #848c99;
+  font-weight: 500;
+}
+
+.skills .box .percent{
+  position: relative;
   width: 90%;
-  -webkit-animation: skill_2 0.6s ease;
-          animation: skill_2 0.6s ease;
+  height: 10px;
+  background: #f0f0f0;
+
 }
-.section-wrapper .skill-percentage:nth-child(3)::before {
-  width: 50%;
-  -webkit-animation: skill_3 0.6s ease;
-          animation: skill_3 0.6s ease;
+
+.skills .box .percent div {
+  position: absolute;
+  top:0;
+  left:00;
+  height: 100%;
+  background: #03a9f4 ;
+
 }
-.section-wrapper .skill-percentage:nth-child(4)::before {
-  width: 60%;
-  -webkit-animation: skill_4 0.6s ease;
-          animation: skill_4 0.6s ease;
+
+.interest ul{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
 }
-.section-wrapper .skill-percentage:nth-child(5)::before {
-  width: 70%;
-  -webkit-animation: skill_5 0.6s ease;
-          animation: skill_5 0.6s ease;
+
+.interest ul li {
+  list-style: none ;
+  color: #333 ;
+  font-weight: 500;
+  margin: 10px 0;
+  margin-left: 20px;
 }
-.section-wrapper .skill-percentage:nth-child(6)::before {
-  width: 70%;
-  -webkit-animation: skill_6 0.6s ease;
-          animation: skill_6 0.6s ease;
+
+.interest ul .fa {
+  color: #03a9f4;
+  font-size: 18px;
+  width:20px ;
 }
-.section-wrapper .skill-percentage:nth-child(7)::before {
-  width: 70%;
-  -webkit-animation: skill_6 0.6s ease;
-          animation: skill_6 0.6s ease;
-}
- 
-@-webkit-keyframes skill_1 {
-  from {
-    width: 0%;
+
+@media (max-width:1000px){
+  .container{
+    margin: 10px;
+    grid-template-columns: repeat();
+
   }
-  to {
-    width: 80%;
-  }
+.interest ul{
+  grid-template-columns: repeat();
 }
- 
-@keyframes skill_1 {
-  from {
-    width: 0%;
-  }
-  to {
-    width: 80%;
-  }
+
 }
-@-webkit-keyframes skill_2 {
-  from {
-    width: 0%;
+
+@media screen and (max-width:600px){
+  .about .box {
+    flex-direction: row;
+    
   }
-  to {
-    width: 90%;
+  .about .box .year_company{
+    min-width: 150px;
+    margin-bottom: 5px;
   }
-}
-@keyframes skill_2 {
-  from {
-    width: 0%;
+
+  .interest ul{
+    grid-template-columns: repeat(1,1fr);
   }
-  to {
-    width: 90%;
-  }
-}
-@-webkit-keyframes skill_3 {
-  from {
-    width: 0%;
-  }
-  to {
-    width: 50%;
+  .skill .box{
+    
+    grid-template-columns: repeat(1,1fr);
   }
 }
-@keyframes skill_3 {
-  from {
-    width: 0%;
-  }
-  to {
-    width: 50%;
-  }
+
+.text {
+  line-height: 1.4;
 }
-@-webkit-keyframes skill_4 {
-  from {
-    width: 0%;
+
+@media screen and (min-width: 0px) and (max-width: 673px) {
+  .left_side{
+    grid-template-columns: repeat(1, 1fr);
+    margin-right: auto;
   }
-  to {
-    width: 60%;
-  }
+
+  
+
 }
-@keyframes skill_4 {
-  from {
-    width: 0%;
-  }
-  to {
-    width: 60%;
-  }
-}
-@-webkit-keyframes skill_5 {
-  from {
-    width: 0%;
-  }
-  to {
-    width: 70%;
-  }
-}
-@keyframes skill_5 {
-  from {
-    width: 0%;
-  }
-  to {
-    width: 70%;
-  }
-}
-@-webkit-keyframes skill_6 {
-  from {
-    width: 0%;
-  }
-  to {
-    width: 70%;
-  }
-}
-@keyframes skill_6 {
-  from {
-    width: 0%;
-  }
-  to {
-    width: 70%;
-  }
-}
-@-webkit-keyframes skill_7 {
-  from {
-    width: 0%;
-  }
-  to {
-    width: 70%;
-  }
-}
-@keyframes skill_7 {
-  from {
-    width: 0%;
-  }
-  to {
-    width: 70%;
-  }
-}
-</style>
